--- a/RTT_Client_OGRE/ogre.cfg
+++ b/RTT_Client_OGRE/ogre.cfg
@@ -6,6 +6,6 @@ FSAA=8
 Fixed Pipeline Enabled=Yes
 Full Screen=No
 RTT Preferred Mode=FBO
-VSync=Yes
-Video Mode=1280 x 800
+VSync=No
+Video Mode=1280 x  800
 sRGB Gamma Conversion=No
