OGRE: Fixed wrong resources.cfg locations for debug version

--- a/RTT_Client_OGRE/Debug/resources.cfg
+++ b/RTT_Client_OGRE/Debug/resources.cfg
@@ -1,9 +1,9 @@
 # Resources required by the sample browser and most samples.
 [Essential]
-FileSystem=../assets/UI/CEGUI
-FileSystem=../assets/UI/OgreCore
+FileSystem=./assets/UI/CEGUI
+FileSystem=./assets/UI/OgreCore
 
 [RTT]
-FileSystem=../assets/models
-FileSystem=../assets/materials
-FileSystem=../assets/materials/textures
+FileSystem=./assets/models
+FileSystem=./assets/materials
+FileSystem=./assets/materials/textures
