--- a/RTT_Client_OGRE/resources_install.cfg
+++ b/RTT_Client_OGRE/resources_install.cfg
@@ -1,6 +1,7 @@
 # Resources required by the sample browser and most samples.
 [Essential]
 FileSystem=/usr/share/RTT/Ogre/assets/UI/CEGUI
+FileSystem=/usr/share/RTT/Ogre/assets/UI/OgreCore
 
 [RTT]
 FileSystem=/usr/share/RTT/Ogre/assets/models
