--- a/RTT_Client_Core/.cproject
+++ b/RTT_Client_Core/.cproject
@@ -9,7 +9,7 @@
 					<externalSetting>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/RTT_Client_Core"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/RTT_Client_Core/Debug"/>
-						<entry flags="RESOLVED" kind="libraryFile" name="RTT_Client_Core"/>
+						<entry flags="RESOLVED" kind="libraryFile" name="RTT_Client_Core" srcPrefixMapping="" srcRootPath=""/>
 					</externalSetting>
 				</externalSettings>
 				<extensions>
@@ -64,6 +64,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Events.cpp"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
@@ -77,7 +78,7 @@
 					<externalSetting>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/RTT_Client_Core"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/RTT_Client_Core/Release"/>
-						<entry flags="RESOLVED" kind="libraryFile" name="RTT_Client_Core"/>
+						<entry flags="RESOLVED" kind="libraryFile" name="RTT_Client_Core" srcPrefixMapping="" srcRootPath=""/>
 					</externalSetting>
 				</externalSettings>
 				<extensions>
@@ -132,8 +133,9 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
+						<entry excluding="src|Events.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Events.cpp"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
-						<entry excluding="src" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -168,4 +170,5 @@
 		<resource resourceType="PROJECT" workspacePath="/RTT_Client_Core"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
+	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 </cproject>
