--- a/RTT_Client_Core/.cproject
+++ b/RTT_Client_Core/.cproject
@@ -9,7 +9,7 @@
 					<externalSetting>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/RTT_Client_Core"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/RTT_Client_Core/Debug"/>
-						<entry flags="RESOLVED" kind="libraryFile" name="RTT_Client_Core" srcPrefixMapping="" srcRootPath=""/>
+						<entry flags="RESOLVED" kind="libraryFile" name="RTT_Client_Core"/>
 					</externalSetting>
 				</externalSettings>
 				<extensions>
@@ -28,7 +28,7 @@
 							<targetPlatform id="cdt.managedbuild.target.gnu.platform.so.debug.1234209834" name="Debug Platform" superClass="cdt.managedbuild.target.gnu.platform.so.debug"/>
 							<builder buildPath="${workspace_loc:/RTT_Client_Core/Debug}" id="cdt.managedbuild.target.gnu.builder.so.debug.2079309288" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.so.debug"/>
 							<tool id="cdt.managedbuild.tool.gnu.archiver.base.567806897" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base"/>
-							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.so.debug.1719133818" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.so.debug">
+							<tool command="g++" commandLinePattern="${COMMAND} ${FLAGS} ${OUTPUT_FLAG} ${OUTPUT_PREFIX}${OUTPUT} ${INPUTS}" id="cdt.managedbuild.tool.gnu.cpp.compiler.so.debug.1719133818" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.so.debug">
 								<option id="gnu.cpp.compiler.so.debug.option.optimization.level.1228104869" name="Optimization Level" superClass="gnu.cpp.compiler.so.debug.option.optimization.level" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.so.debug.option.debugging.level.76007146" name="Debug Level" superClass="gnu.cpp.compiler.so.debug.option.debugging.level" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.include.paths.856072001" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
@@ -49,6 +49,8 @@
 								<option defaultValue="true" id="gnu.cpp.link.so.debug.option.shared.1892894615" name="Shared (-shared)" superClass="gnu.cpp.link.so.debug.option.shared" valueType="boolean"/>
 								<option id="gnu.cpp.link.option.libs.1993288531" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="RTT_Common"/>
+									<listOptionValue builtIn="false" value="event_pthreads"/>
+									<listOptionValue builtIn="false" value="event"/>
 								</option>
 								<option id="gnu.cpp.link.option.paths.1035824393" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="../../RTT_Common/Debug"/>
@@ -78,7 +80,7 @@
 					<externalSetting>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/RTT_Client_Core"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/RTT_Client_Core/Release"/>
-						<entry flags="RESOLVED" kind="libraryFile" name="RTT_Client_Core" srcPrefixMapping="" srcRootPath=""/>
+						<entry flags="RESOLVED" kind="libraryFile" name="RTT_Client_Core"/>
 					</externalSetting>
 				</externalSettings>
 				<extensions>
@@ -118,6 +120,8 @@
 								<option defaultValue="true" id="gnu.cpp.link.so.release.option.shared.1917565318" name="Shared (-shared)" superClass="gnu.cpp.link.so.release.option.shared" valueType="boolean"/>
 								<option id="gnu.cpp.link.option.libs.407335425" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="RTT_Common"/>
+									<listOptionValue builtIn="false" value="event_pthreads"/>
+									<listOptionValue builtIn="false" value="event"/>
 								</option>
 								<option id="gnu.cpp.link.option.paths.1380465301" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="../../RTT_Common/Release"/>
